fixed spacing issues

--- a/src/css/big.css
+++ b/src/css/big.css
@@ -170,7 +170,7 @@
 
        #clients {
         font-family:  "Helvetica Neue", "HelveticaNeue-Light", "Helvetica Neue Light", Helvetica, Arial, "Lucida Grande", sans-serif; 
-        padding: 0 4em 3.5em 4em;            
+        padding: 0 3em 3.5em 3em;            
    }
 
        .heading {
