--- a/src/css/medium.css
+++ b/src/css/medium.css
@@ -169,7 +169,7 @@
    }
 
    #clients {
-    padding: 0 4em 3.5em 4em;            
+    padding: 0 3em 3.5em 3em;            
 }
 
    .heading {
